// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CryptoList /> matches snapshot when an error is returned 1`] = `
<h1>
  An error occured
</h1>
`;

exports[`<CryptoList /> matches snapshot when first mounted 1`] = `
<h1>
  Loading...
</h1>
`;
